--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -125,6 +125,10 @@
   <ItemGroup>
     <ClCompile Include="ConsoleApplication1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="definationHeader.h" />
+    <ClInclude Include="realizationHeader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
