--- a/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="realizationHeader.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
